# seminario-backend-rust

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  prometheus.yml
.github/workflows/: seminario.yml
docker-entrypoint-initdb.d/: init-db.sh
scripts/: indexes.sql  migration.sql
seminario-backend-rust/: Cargo.toml  Dockerfile  Dockerfile.k6  docker-compose.yml  prometheus.yml
seminario-backend-rust/docker-entrypoint-initdb.d/: 01-migration.sql  02-stored_procedures.sql  03-fix_stored_procedures.sql  05-init.sql  init-db.sh
seminario-backend-rust/scripts/: fix_stored_procedures.sql  stored_procedures.sql
seminario-backend-rust/src/: main.rs  routes.rs
seminario-backend-rust/src/handlers/: assignment.rs  categories.rs  courses.rs  enrollments.rs  home.rs  mod.rs  roles.rs  sections.rs  users.rs
seminario-backend-rust/src/models/: assignment.rs  enrollments.rs  mod.rs  submissions.rs
seminario-backend-rust/tests/: test_script.js
src/: config.rs  main.rs  routes.rs  schema.rs
src/error/: error.rs  error_handler.rs
src/handlers/: assignment.rs  categories.rs  courses.rs  enrollments.rs  mod.rs  roles.rs  sections.rs  submissions.rs  users.rs
src/models/: assignment.rs  category.rs  course.rs  enrollments.rs  mod.rs  rol.rs  sections.rs  submissions.rs  user.rs
tests/: test_script.js
